houses and details draw to page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,23 +2,26 @@
   "javascript.preferences.importModuleSpecifier": "relative",
   "javascript.preferences.importModuleSpecifierEnding": "js",
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#9ee281",
-    "activityBar.background": "#9ee281",
+    "activityBar.activeBackground": "#9c61d8",
+    "activityBar.background": "#9c61d8",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#6487db",
+    "activityBarBadge.background": "#dfaf7f",
     "activityBarBadge.foreground": "#15202b",
-    "commandCenter.border": "#15202b99",
-    "sash.hoverBorder": "#9ee281",
-    "statusBar.background": "#7ed957",
-    "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#5fce2f",
-    "statusBarItem.remoteBackground": "#7ed957",
-    "statusBarItem.remoteForeground": "#15202b",
-    "titleBar.activeBackground": "#7ed957",
-    "titleBar.activeForeground": "#15202b",
-    "titleBar.inactiveBackground": "#7ed95799",
-    "titleBar.inactiveForeground": "#15202b99"
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#9c61d8",
+    "statusBar.background": "#8238ce",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#9c61d8",
+    "statusBarItem.remoteBackground": "#8238ce",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "titleBar.activeBackground": "#8238ce",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#8238ce99",
+    "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "7ed957",
+  "peacock.color": "#8238ce",
+  "cSpell.words": [
+    "sqft"
+  ],
 }
